2005.336: 0.9
	- Update to libmseed 1.4.5.

2005.329: 0.8.2
	- Update to libmseed 1.4.4.
	- Add explicit text to man page and help message about
	'filenr.lis' being a special case list file.
	- List file parsing now assumes that the last, space
	separated field on each line is the filename; accomodates
	simple list files and various dirf (filenr.lis) formats.

2005.315: 0.8.1
	- Update to libmseed 1.4.3 which has a WIN32 define for 
	strcasecmp().

2005.314: 0.8
	- If the 3rd component character is not a space put it in the
	first character of the location code, default location code is
	now '00'.
	- 'filenr.lis' is now recognized as a list file.
	- Output file name now adds '_MSEED' unless it's a standard
	SeisAn file in which case the 'S' at character 19 is changed to
	an 'M'.
	- Upate to libmseed 1.4.2.
	- Update documentation, components with spaces must be quoted.

2005.280: 0.7
	- Add support for 16-bit (2 byte) integer samples.
	- Move input file format detection out of main loop and before
	creation of the output file.  If a SeisAn format cannot be
	detected the output will not be created.

2005.279: 0.6b
	- Read list files after done parsing all command line options,
	the desired verbosity is then used, etc.

2005.279: 0.6
	- The default output files are now the input file names with
	".mseed" suffix.

2005.278: 0.5
	- If an input file is prefixed with '@' it should be a list
	of input data files either in simple text or dirf (filenr.lis)
	format.
	- Change default packing to do a flushing pack at the end of
	each block.  The '-B' option can be used to buffer all of the
	input data before packing.
	- Add seisan2mseed.1 man page to doc directory.

2005.277:
	- fclose the input files after reading them.

2005.277: 0.4
	- Add option to perform the packing of data as it is read in.
	There are pros and cons either way.

2005.272: 0.3
	- Add parsing of format <= 6.0 PC files.
	- Pack data as it is read in, the output will be interleaved if