@@ -1,5 +1,6 @@
 2005.336: 0.9
 	- Update to libmseed 1.4.5.
+	- Fix reading of 16-bit (2 byte) integer samples.
 
 2005.329: 0.8.2
 	- Update to libmseed 1.4.4.
